# game.libretro.beetle-saturn

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: sync-addon-metadata-translations.yml
debian/: changelog.in  control  copyright
depends/common/beetle-saturn/: CMakeLists.txt  beetle-saturn.txt
game.libretro.beetle-saturn/: addon.xml.in
game.libretro.beetle-saturn/resources/: buttonmap.xml  settings.xml  topology.xml
game.libretro.beetle-saturn/resources/language/English/: strings.po
game.libretro.beetle-saturn/resources/language/resource.language.af_za/: strings.po
game.libretro.beetle-saturn/resources/language/resource.language.am_et/: strings.po
game.libretro.beetle-saturn/resources/language/resource.language.ar_dz/: strings.po
game.libretro.beetle-saturn/resources/language/resource.language.ar_sa/: strings.po
game.libretro.beetle-saturn/resources/language/resource.language.ast_es/: strings.po
game.libretro.beetle-saturn/resources/language/resource.language.az_az/: strings.po
game.libretro.beetle-saturn/resources/language/resource.language.be_by/: strings.po
game.libretro.beetle-saturn/resources/language/resource.language.bg_bg/: strings.po
game.libretro.beetle-saturn/resources/language/resource.language.bs_ba/: strings.po
game.libretro.beetle-saturn/resources/language/resource.language.ca_es/: strings.po
game.libretro.beetle-saturn/resources/language/resource.language.cs_cz/: strings.po
game.libretro.beetle-saturn/resources/language/resource.language.cy_gb/: strings.po
(+79 files in other folders)
